--- a/assignment 1/c.html
+++ b/assignment 1/c.html
@@ -15,7 +15,7 @@
 
     <a href="d.html">Link to Internal file</a>
     <p><b>Image kept inside folder</b> </p>
-    <img src="../img/bmw-ga6e5fa486_1920.jpg" width="200" alt="BMW IMG">
+    <img src="/img/bmw-ga6e5fa486_1920.jpg" width="200" alt="BMW IMG">
     <p><b>Uploaded Image</b></p>
     <img src="https://th.bing.com/th/id/OIP.Ldh8xBUyVhoqfJJKhupLGAHaEK?pid=ImgDet&rs=1" width="200" alt="Nature"> <br>
     <hr>
