--- a/assignment 3/b3.html
+++ b/assignment 3/b3.html
@@ -7,19 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="border: 2px solid grey; width: 40%; "><h1>Practice Assessment 1</h1>
-        <hr>
-        <a href="https://en.wikipedia.org/wiki/History_of_India" target="_blank">Link to a website open in new tab </a> <br> <br>
-        <a href="https://en.wikipedia.org/wiki/Agriculture">Link to a website open in same tab</a> <br> <br>
-    
-        <a href="d.html">Link to Internal file</a>
-        <p><b>Image kept inside folder</b> </p>
-        <img src="../img/bmw-ga6e5fa486_1920.jpg" width="200" alt="BMW IMG">
-        <p><b>Uploaded Image</b></p>
-        <img src="https://th.bing.com/th/id/OIP.Ldh8xBUyVhoqfJJKhupLGAHaEK?pid=ImgDet&rs=1" width="200" alt="Nature"> <br>
-        <hr>
-        <h1>List</h1>
-        <a href="d.html">Click Here</a></div>
+    <iframe src="../assignment 1/c.html" frameborder="100%" width="400px"height="500px"></iframe>
     <a href="a3.html">Click Here to see video</a>
 </body>
 </html>
