--- a/assignment 2/b2.html
+++ b/assignment 2/b2.html
@@ -31,7 +31,7 @@
         <input type="checkbox" id="mean" value="MEAN" name="course">
         <label for="mean">MEAN</label>
         <input type="checkbox" id="mevn" value="MEVN" name="course">
-        <label for="mevn">MEVN</label><br>
+        <label for="mevn">MEAN</label><br>
         <p>Field:</p>
         <select name="field" id="">
             <option value="">
