--- a/Backtracking.html
+++ b/Backtracking.html
@@ -32,7 +32,7 @@
         another choice at that node. If you end up at the root with no options left, there are no good leaves to be found.
     </p>
     <p>This need an example.</p>
-    <img src="../img/Image_root.png" alt="relode again">
+    <img src="./img1/Image_root.png" alt="relode again">
     <ol>
         <li>Starting at Root, your options are A and B. You choose A.</li>
         <li>At A, your otions are C and D. You choose C.</li>
@@ -522,28 +522,28 @@
     <table border="1px" style="background-color: #D8D8D8; margin-left: 35%; align-items: inherit;">
         <tr width="250px">
             <td>
-                <img src="../img/black-ball.png" alt="black-ball">
+                <img src="./img1/black-ball.png" alt="black-ball">
             </td>
             <td>
-                <img src="../img/black-ball.png" alt="black-ball">
+                <img src="./img1/black-ball.png" alt="black-ball">
             </td>
             <td width="45"></td>
-            <td><img src="../img/white-ball.png" alt="white-ball"></td>
-            <td><img src="../img/white-ball.png" alt="white-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
         </tr>
     </table>
     <p>The goal is to reverse the positions of the marbles:</p>
     <table border="1px" style="background-color: #D8D8D8; margin-left: 35%; align-items: inherit;">
         <tr width="250px">
             <td>
-                <img src="../img/white-ball.png" alt="black-ball">
+                <img src="./img1/white-ball.png" alt="white-ball">
             </td>
             <td>
-                <img src="../img/white-ball.png" alt="black-ball">
+                <img src="./img1/white-ball.png" alt="white-ball">
             </td>
             <td width="45"></td>
-            <td><img src="../img/black-ball.png" alt="white-ball"></td>
-            <td><img src="../img/black-ball.png" alt="white-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
         </tr>
     </table>
     <p>
@@ -559,11 +559,11 @@
             <td>
                 <table border="1px" style="background-color: grey; margin-left: 11%;">
                 <tr width="250px">
-                    <td><img src="../img/black-ball.png" alt="black-ball"></td>
-                    <td><img src="../img/black-ball.png" alt="black-ball"></td>
+                    <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+                    <td><img src="./img1/black-ball.png" alt="black-ball"></td>
                     <td width="85px"></td>
-                    <td><img src="../img/white-ball.png" alt="black-ball"></td>
-                    <td><img src="../img/white-ball.png" alt="black-ball"></td>
+                    <td><img src="./img1/white-ball.png" alt="white-ball"></td>
+                    <td><img src="./img1/white-ball.png" alt="white-ball"></td>
                 </tr></table>
             </td>
         </tr>
@@ -573,51 +573,51 @@
     <td>
         <table border="1px" style="background-color: grey; margin-left: 3%; align-items: inherit;">
             <tr width="250px">
-                <td><img src="../img/black-ball.png" alt="black-ball"></td>
+                <td><img src="./img1/black-ball.png" alt="black-ball"></td>
                 <td width="60px"></td>
-                <td><img src="../img/black-ball.png" alt="black-ball"></td>
-                <td><img src="../img/white-ball.png" alt="black-ball"></td>
-                <td><img src="../img/white-ball.png" alt="black-ball"></td>
+                <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+                <td><img src="./img1/white-ball.png" alt="white-ball"></td>
+                <td><img src="./img1/white-ball.png" alt="white-ball"></td>
             </tr>
         </table>
     </td></tr></table><br>
     <table style="margin-left: 25%; align-items: inherit;"><tr><td>White jumps:</td><td>
         <table border="1px" style="background-color: grey; margin-left: 15%; align-items: inherit;">
             <tr width="250px">
-                <td><img src="../img/black-ball.png" alt="black-ball"></td>
-                <td><img src="../img/white-ball.png" alt="black-ball"></td>
-                <td><img src="../img/black-ball.png" alt="black-ball"></td>
+                <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+                <td><img src="./img1/white-ball.png" alt="white-ball"></td>
+                <td><img src="./img1/black-ball.png" alt="black-ball"></td>
                 <td width="100px"></td>
-                <td><img src="../img/white-ball.png" alt="black-ball"></td>
+                <td><img src="./img1/white-ball.png" alt="white-ball"></td>
             </tr>
         </table>
     </td></tr></table><br>
     <table style="margin-left: 25%; align-items: inherit;"><tr><td>Black moves ahead:</td>
     <td><table border="1px" style="background-color: grey; margin-left: 3%; align-items: inherit;">
         <tr width="250px">
-            <td><img src="../img/black-ball.png" alt="black-ball"></td>
-            <td><img src="../img/white-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
             <td width="60px"></td>
-            <td><img src="../img/black-ball.png" alt="black-ball"></td>
-            <td><img src="../img/white-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
         </tr>
     </table></td></tr></table><br>
     <table style="margin-left: 25%; align-items: inherit;"><tr><td>Black jumps:</td><td><table border="1px" style="background-color: grey; margin-left: 16%; align-items: inherit;">
         <tr width="250px">
             <td width="100px"></td>
-            <td><img src="../img/white-ball.png" alt="black-ball"></td>
-            <td><img src="../img/black-ball.png" alt="black-ball"></td>
-            <td><img src="../img/black-ball.png" alt="black-ball"></td>
-            <td><img src="../img/white-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
         </tr>
     </table></td></tr></table><br>
     <table style="margin-left: 25%; align-items: inherit;"><tr><td>White moves ahead:</td><td><table border="1px" style="background-color: grey; margin-left: 3%; align-items: inherit;">
         <tr width="250px">
             <td width="55px"></td>
-            <td><img src="../img/white-ball.png" alt="black-ball"></td>
-            <td><img src="../img/black-ball.png" alt="black-ball"></td>
-            <td><img src="../img/black-ball.png" alt="black-ball"></td>
-            <td><img src="../img/white-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/black-ball.png" alt="black-ball"></td>
+            <td><img src="./img1/white-ball.png" alt="white-ball"></td>
         </tr>
     </table></td></tr></table><br>
     <table style="margin-left: 25%; align-items: inherit;"><tr><td>Stuck!</td><td><table>
